--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "third_party/cmark"]
-	path = third_party/cmark
-	url = https://github.com/commonmark/cmark.git
+[submodule "third_party/cmark-gfm"]
+	path = third_party/cmark-gfm
+	url = https://github.com/github/cmark-gfm.git
