--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -34,6 +34,15 @@ jobs:
           path: cmark-gfm
           key: cmark-gfm-${{ runner.os }}
 
+      - name: Install dependencies (Ubuntu)
+        if: runner.os == 'Linux'
+        run: |
+          sudo apt update
+          sudo apt install -y cmake g++ libgtk-3-dev libjpeg-dev libtiff-dev \
+                              libpng-dev zlib1g-dev libexpat1-dev libgstreamer1.0-dev \
+                              libgstreamer-plugins-base1.0-dev
+
+
       - name: Build wxWidgets from source
         run: |
           git clone --branch v3.2.6 --depth 1 https://github.com/wxWidgets/wxWidgets.git wxWidgets
