--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -21,6 +21,7 @@ jobs:
         uses: actions/checkout@v4
         with:
           submodules: 'true'
+          path: wxmarkdowneditor
 
       - name: Cache wxWidgets
         uses: actions/cache@v3
@@ -45,11 +46,11 @@ jobs:
 
       - name: Build wxWidgets from source
         run: |
-          git clone --branch v3.2.6 --depth 1 https://github.com/wxWidgets/wxWidgets.git wxWidgets
-          cd wxWidgets
+          git clone --branch v3.2.6 --depth 1 https://github.com/wxWidgets/wxWidgets.git ${GITHUB_WORKSPACE}/wxWidgets
+          cd ${GITHUB_WORKSPACE}/wxWidgets
           mkdir -p local_build
           cd local_build
-          cmake .. -DCMAKE_INSTALL_PREFIX=$PWD/../install -DCMAKE_BUILD_TYPE=Release -DwxBUILD_SHARED=OFF -DwxBUILD_TESTS=OFF
+          cmake .. -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/wxWidgets-install -DCMAKE_BUILD_TYPE=Release -DwxBUILD_SHARED=OFF -DwxBUILD_TESTS=OFF
           cmake --build . --config Release --target install
 
       - name: Build and install cmark-gfm
@@ -58,13 +59,15 @@ jobs:
           cd cmark-gfm
           mkdir -p build
           cd build
-          cmake .. -DCMAKE_INSTALL_PREFIX=$PWD/../install -DCMAKE_BUILD_TYPE=Release -DCMARK_TESTS=OFF -DCMARK_STATIC=ON -DCMARK_SHARED=OFF
+          cmake .. -DCMAKE_INSTALL_PREFIX=${GITHUB_WORKSPACE}/cmark-gfm-install -DCMAKE_BUILD_TYPE=Release -DCMARK_TESTS=OFF -DCMARK_STATIC=ON -DCMARK_SHARED=OFF
           cmake --build . --config Release --target install
 
       - name: Configure CMake
-        run: cmake -B build -DWXWIDGETS_PATH=$PWD/wxWidgets/install -DCMAKE_BUILD_TYPE=Release
+        run: |
+          cd ${GITHUB_WORKSPACE}/wxmarkdowneditor
+          cmake -B build -DWXWIDGETS_PATH=${GITHUB_WORKSPACE}/wxWidgets-install -DCMAKE_BUILD_TYPE=Release
         env:
-          CMAKE_PREFIX_PATH: $PWD/cmark-gfm/install
+          CMAKE_PREFIX_PATH: ${GITHUB_WORKSPACE}/cmark-gfm-install
 
       - name: Build project
         run: cmake --build build --config Release
