--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,6 +36,14 @@ if (CMARK_GFM_PATH)
     set(CMARK_GFM_INSTALL_DIR "${CMARK_GFM_PATH}")
     set(CMARK_GFM_LIB_DIR "${CMARK_GFM_INSTALL_DIR}/lib")
     set(CMARK_GFM_INCLUDE_DIR "${CMARK_GFM_INSTALL_DIR}/include")
+    set(CMARK_GFM_NAME "${CMAKE_STATIC_LIBRARY_PREFIX}cmark-gfm${CMAKE_STATIC_LIBRARY_SUFFIX}")
+    set(CMARK_GFM_EXT_NAME "${CMAKE_STATIC_LIBRARY_PREFIX}cmark-gfm-extensions${CMAKE_STATIC_LIBRARY_SUFFIX}")
+
+    # if not unix
+    if (WIN32)
+        set(CMARK_GFM_NAME "${CMAKE_STATIC_LIBRARY_PREFIX}cmark-gfm_static${CMAKE_STATIC_LIBRARY_SUFFIX}")
+        set(CMARK_GFM_EXT_NAME "${CMAKE_STATIC_LIBRARY_PREFIX}cmark-gfm-extensions_static${CMAKE_STATIC_LIBRARY_SUFFIX}")
+    endif()
 
 
     include_directories(${CMARK_GFM_INCLUDE_DIR})
